trocando a api omdb para a tmdb para usar melhor as funcionalidades disponíveis

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <header>
-        <div>
-            <h1>Filmes e Séries Populares</h1>
+        <div class="navbar">
+            <a href="#" id="popular">Filmes Populares</a>
+            <a href="#" id="acao">Ação</a>
+            <a href="#" id="comedia">Comédia</a>
+            <a href="#" id="desenho">Desenho</a>
           </div>
           <div class="movie-container" id="movie-container"></div>
     </header>
