criando as rotas e alteração de hashs

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <div class="navbar">
-            <a href="#" id="popular">Filmes Populares</a>
-            <a href="#" id="acao">Ação</a>
-            <a href="#" id="comedia">Comédia</a>
-            <a href="#" id="desenho">Desenho</a>
-          </div>
-          <div class="movie-container" id="movie-container"></div>
+            <a href="#filmes" id="popular">Filmes Populares</a>
+            <a href="#acao" id="acao">Ação</a>
+            <a href="#comedia" id="comedia">Comédia</a>
+            <a href="#desenho" id="desenho">Desenho</a>
+        </div>
     </header>
-      <main id="movieList"></main>
-      <script type="module" src="request.js"></script>
+    <div class="movie-container" id="movie-container"></div>
+    <script type="module" src="request.js"></script>
+    <script type="module" src="router.js"></script>
 </body>
 </html>
